--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Mey Tutor is a physics and mathematics tutoring service for Grade 10-12 students. We offer personalized tutoring services to help students excel in their studies."
+    />
+    <meta
+      name="keywords"
+      content="physics, chemistry, biology, Physical Science, mathematics, Maths, tutoring, Grade 10-12, Mey Tutor, South Africa, Cape Town, Saldanha, Vredenburg, Langebaan, Durban, Johannesburg, Pretoria, Gauteng, Tutor, Tutoring, Tutors, Tutoring Services, Tutoring Center, Tutoring School, Tutoring Institution, Tutoring Institute, Tutoring Center, Tutoring School, Tutoring Institution, Tutoring Institute"
+    />
+    <meta name="author" content="Mey Tutor" /> 
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="bingbot" content="index, follow" />
+    <meta name="yandexbot" content="index, follow" />
+    <meta name="sitemap" content="https://meytutor.co.za/sitemap.xml" />
     <link rel="icon" type="image/svg+xml" href="/meytutor-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MeyTutor</title>
